# ssh_backup_with_python

./: .env_example  .gitignore  README.md  Readme  main.py  mysql_backup.bat  pyproject.toml
